# niftyzk

./: .gitignore  LICENSE  graph.dot  main.js  package-lock.json  package.json  readme.md  todo.md
frontend/: copyToServer.sh  index.html  package-lock.json  package.json
frontend/src/: websockets.ts
lib/: deps.js  init.js  metadata.js  paths.js
lib/ai/: credentials.js  openai.js  utils.js
lib/circom/: commitment_hasher.circom  template.js
lib/compile/: contract.js  finalize.js  runPlonkCompiler.js  runcompiler.js  setup_plonk.js  verificationkey.js
lib/dev/: hotreload.js
lib/gencircuit/: circuitprompt.js
lib/init/: packages.js
lib/loaders/: ptauLoader.js
lib/merkletree/: hash.js
lib/phase2ceremony/: app.js  files.js  queue.js  server.js  verify.js  websockets.js
lib/phase2ceremony/public/: frontend.6895a95d.js  frontend.6895a95d.js.map  frontend.b1b61ec1.js  frontend.b1b61ec1.js.map  index.html  styles.6cd63bf6.css  styles.6cd63bf6.css.map
lib/templates/circom/: eddsa.js  fixedMerkleTree.js  genericCommitmentVerifier.js  merkle_tree.circom  metadata.js  template.js  utils.js
lib/templates/js/: eddsa.js  fixedMerkletreeTemplate.js  hotreload.js  smt.js  templates.js
lib/templates/readme/: template.js
lib/templates/rust/arkworks_groth16/: contractTemplate.js
lib/templates/rust/bellman_groth16/: adapterTemplate.js  contractTemplate.js
lib/templates/rust/bellman_groth16/adapter/: vkeyAdapter.js
lib/templates/rust/bellman_plonk/: adapter.js  contractTemplate.js
loaders/: ptauLoader.js
rust/: Cargo.toml
rust/local_num_cpus/: Cargo.toml
rust/local_num_cpus/src/: lib.rs
rust/pkg/: package.json  plonkit.d.ts  plonkit.js  plonkit_bg.wasm  plonkit_bg.wasm.d.ts
rust/src/: bindings.rs  lib.rs  plonk.rs  reader.rs
test/: tempates_test.js  testPlonkAdapter.js
