[package]
name = "plonkit"
version = "0.1.6"

[dependencies]
anyhow = "1.0.34"
# bellman_ce = { git = "https://github.com/matter-labs/bellman", branch = "beta", default-features = false, features = [ "plonk" ] } # active features depend on build type
bellman_vk_codegen = { git = "https://github.com/fluidex/solidity_plonk_verifier.git" }
byteorder = "1"
env_logger = "0.8.2"
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = [ "multicore", "plonk" ] }
hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.3.3"
num-traits = "0.2.8"
rand = "0.4"
# recursive_aggregation_circuit = { package = "recursive_aggregation_circuit", version = "1.0.0", git = "https://github.com/matter-labs/recursive_aggregation_circuit.git", branch = "master" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
recurisive_vk_codegen = { package = "solidity_recursive_plonk_verifier", git = "https://github.com/fluidex/solidity_recursive_plonk_verifier.git" }
getrandom = { version = "0.2", features = ["js"] }
# clap = { version = "4.6", features = ["derive"] }

[features]
default = [ ]

[lib]
crate-type = ["cdylib", "rlib"]