[package]
name = "plonkit"
version = "0.1.6"

[dependencies]
anyhow = "1.0.34"
bellman_ce = { git = "https://github.com/matter-labs/bellman", branch = "beta", default-features = false, features = [
    "plonk",
    "wasm",
] } # active features depend on build type
bellman_vk_codegen = { git = "https://github.com/fluidex/solidity_plonk_verifier.git", default-features = false }
byteorder = "1"
env_logger = "0.8.2"
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = [
    "plonk",
], default-features = false }
hex = "0.4"
hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
console_log = "1"
num-bigint = "0.3.3"
num-traits = "0.2.8"
rand = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
num_cpus = { path = "local_num_cpus" }
